Fixed alignment of buttons in About

--- a/css/index.css
+++ b/css/index.css
@@ -193,11 +193,12 @@ padding-bottom: 20px
 .middle-content-about-page .article-about{
  display: flex;
  flex-wrap: wrap;
- justify-content: flex-start;
+ justify-content: space-between;
  width: 385px;
- padding-top: 20px;
- padding-bottom: 20px;
- justify-content: center; 
+ padding-top: 40px;
+ padding-bottom: 40px;
+ /* justify-content: center;  */
+ border-bottom: 1px dashed black;
  /* border: 5px solid blue; */
 }
 
